<resources>
    <string name="app_name">DrugInteractr</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="list">List</string>
    <string name="intercation">Interactions</string>
    <string name="camera">Scan</string>
    <string name="photo_library">Photo Library</string>
    <string name="checkSelfPermission">checkSelfPermission </string>
    <string name="search">Search</string>
    <string name="search_hint">Search drugs</string>
    <string name="img_desc">Success</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="success">Success</string>
    <string name="ok">OK</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="bycamera">By Camera</string>
    <string name="bysearch">By Search</string>
    <string name="select">Select</string>
    <string name="back">Back</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="camera_scan">Camera Scan</string>
    <string name="nosuggestion">No suggestions found!!</string>
    <string name="adddrug">"Add Drugs!"</string>
    <string name="choose_type">Add drugs via</string>
    <string name="empty_list"> No drugs added yet.\n Please click + button to add the drugs.</string>
    <string name="empty_interaction"> No drug interaction found.</string>
    <string name="drug_added_success">Drug added to the list successfully!!</string>
    <string name="drug_deleted_success">Drug deleted from the list</string>
    <string name="permission_denied">Permission denied</string>
    <string name="norecords_found">no records found</string>
    <string name="permission_denied_dialog">Permission Denied</string>
    <string name="please_allow_permissions">Please allow permissions from App Settings</string>
    <string name="settings">Settings</string>
    <string name="image_ok">OK</string>
    <string name="severity">Severity : %1$s </string>
    <string name="drug_name"> <font color='#EE0000'> !  </font>  %1$s</string>
    <string name="ec"><font fgcolor="red">Hello</font></string>
    <string name="suggestion_found">Suggestions found : %1$s </string>
    <string name="unable_to_access_the_Camera">Unable to access the Camera</string>
    <string name="message"><![CDATA[To enable access,go to Settings->Privacy->Camera and turn on Camera access for this app.]]></string>
    <string name="data_matrix_code_to_be_recognized_the_code_must_intersect_the_center_point_of_the_input_image">Data Matrix code to be recognized, the Data Matrix code must intersect the center point of the camera</string>
    <string name="scanned_result">Scanned Result</string>
    <string name="invalid_barcode">Invalid format. Please try other Barcode</string>
    <string name="cancel_dialog">Cancel</string>
    <string name="selected_text_from_scanned_result">Selected Text from Scanned Result</string>
    <string name="select_the_text_from_scanned_result">Select Text from Scanned Result</string>
    <string name="search_the_selected_text">Search the selected text</string>
    <string name="search_the_scanned_barcode">Search the scanned barcode</string>
    <string name="delete_success">Drug deleted successfully from the list!</string>
    <string name="information"> info </string>
    <string name="scan_view">scan view</string>
    <string name="info">Select the text from <b>scanned result button</b> will select text from<b>scanned result.</b> \nThe Selected text can be copied from selected text from scanned result.\nAfter copying, only copied text will be shown.\nOn long pressing the text, we can select the specific text and make the drug search</string>
    <string name="text_reader_title">Text Reader</string>
    <string name="barcode_scanner_title">Barcode Scanner</string>
    <string name="please_give_camera_access">Please give camera access</string>
    <string name="inserted">Inserted Successfully</string>
    <string name="no_records">Oops no records found!!</string>
    <string name="empty">No drugs found..Please try with different name</string>
    <string name="shop">Shop</string>

</resources>