<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_list_24"
        android:title="@string/list" />
    <item
        android:id="@+id/navigation_interaction_home"
        android:icon="@drawable/ic_baseline_report_problem_24"
        android:title="@string/intercation" />
    <item
        android:id="@+id/navigation_scan"
        android:icon="@drawable/ic_baseline_camera_alt_24"
        android:title="@string/camera" />
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search" />

    <item
        android:id="@+id/navigation_edit"
        android:icon="@drawable/ic_baseline_edit_24"
        android:title="@string/edit" />

</menu>