<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.list.ListFragment">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8x"
        android:layout_marginTop="@dimen/margin_8x"
        android:layout_marginEnd="@dimen/margin_8x"
        android:textAlignment="center"
        android:textSize="@dimen/size_18x"
        android:visibility="gone"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="@dimen/margin_15x"
        android:backgroundTint="@color/octave"
        android:layout_marginBottom="@dimen/size_65x"
        android:contentDescription="@string/add"
        android:src="@android:drawable/ic_input_add"
        app:fabSize="normal"
        android:theme="@style/Theme.DrugInteractr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_cam_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_24x"
        app:fabSize="normal"
        android:visibility="gone"
        android:contentDescription="@string/camera"
        android:backgroundTint="@color/octave"
        android:theme="@style/Theme.DrugInteractr"
        app:layout_constraintBottom_toTopOf="@+id/fab"
        app:layout_constraintEnd_toEndOf="@+id/fab"
        app:layout_constraintStart_toStartOf="@+id/fab"
        app:srcCompat="@drawable/ic_baseline_camera_alt_24" />

    <TextView
        android:id="@+id/addCameraTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_8x"
        android:text="@string/bycamera"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/add_cam_fab"
        app:layout_constraintEnd_toStartOf="@+id/add_cam_fab"
        app:layout_constraintTop_toTopOf="@+id/add_cam_fab" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_24x"
        app:fabSize="normal"
        android:backgroundTint="@color/octave"
        android:visibility="gone"
        android:theme="@style/Theme.DrugInteractr"
        android:contentDescription="@string/search"
        app:layout_constraintBottom_toTopOf="@+id/add_cam_fab"
        app:layout_constraintEnd_toEndOf="@+id/add_cam_fab"
        app:layout_constraintStart_toStartOf="@+id/add_cam_fab"
        app:srcCompat="@drawable/ic_baseline_search_24" />

    <TextView
        android:id="@+id/searchFabTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_8x"
        android:visibility="gone"
        android:text="@string/bysearch"
        app:layout_constraintBottom_toBottomOf="@+id/add_search"
        app:layout_constraintEnd_toStartOf="@+id/add_search"
        app:layout_constraintTop_toTopOf="@+id/add_search" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listRV"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_0x"
        android:layout_marginBottom="@dimen/size_60x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>