<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_10x"
    android:background="@drawable/popup_background"
    android:padding="@dimen/margin_10x">

    <ImageView
        android:id="@+id/animatedCheckmark"
        android:layout_width="@dimen/size_50x"
        android:layout_height="@dimen/size_50x"
        android:layout_gravity="center"
        android:contentDescription="@string/img_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/animated_check" />

    <TextView
        android:id="@+id/popupTitle"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="@dimen/margin_5x"
        android:text="@string/success"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animatedCheckmark" />

    <TextView
        android:id="@+id/popupMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/margin_10x"
        android:text="@string/success"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popupTitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitButton"
        android:layout_width="@dimen/size_250x"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:padding="@dimen/margin_15x"
        android:text="@string/ok"
        android:textAllCaps="true"
        android:textColor="@color/white"
        app:cornerRadius="@dimen/margin_5x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popupMsg" />

</androidx.constraintlayout.widget.ConstraintLayout>