<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/permission_denied_dialog"
        android:textColor="@color/black"
        android:textSize="@dimen/size_16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_5x"
        android:padding="@dimen/size_10x"
        android:text="@string/please_allow_permissions"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/size_14sp"
        app:layout_constraintEnd_toEndOf="@+id/tvTitle"
        app:layout_constraintStart_toStartOf="@+id/tvTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />


    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_01x"
        android:layout_marginTop="@dimen/margin_5x"
        android:background="#424242"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_message" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancel"
        android:layout_width="@dimen/size_0x"
        android:layout_height="@dimen/size_80x"
        android:layout_marginStart="@dimen/margin_2x"
        android:layout_marginTop="@dimen/margin_3x"
        android:layout_marginEnd="@dimen/margin_5x"
        android:layout_weight="1"
        android:text="@string/cancel_dialog"
        android:textAllCaps="false"
        android:textColor="@color/purple_200"

        android:textSize="@dimen/size_14sp"
        app:backgroundTint="@android:color/transparent"
        app:cornerRadius="@dimen/size_08x"
        app:layout_constraintBottom_toBottomOf="@+id/btnSetting"
        app:layout_constraintEnd_toStartOf="@+id/btnSetting"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line"
        app:rippleColor="#33AAAAAA"
        app:strokeColor="@color/octave"
        app:strokeWidth="@dimen/size_02x" />

    <View
        android:id="@+id/views"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_01x"
        android:layout_marginTop="@dimen/margin_2x"
        android:background="@color/permission_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSetting"
        android:layout_width="@dimen/size_0x"
        android:layout_height="@dimen/size_80x"
        android:layout_marginStart="@dimen/margin_2x"
        android:layout_marginTop="@dimen/margin_3x"
        android:layout_marginEnd="@dimen/margin_2x"
        android:layout_weight="1"
        android:text="@string/settings"
        android:textAllCaps="false"
        android:textColor="@color/purple_200"
        android:textSize="@dimen/size_14sp"
        app:backgroundTint="@android:color/transparent"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnCancel"
        app:layout_constraintTop_toBottomOf="@+id/tv_message"
        app:rippleColor="@color/ripple_color"
        app:strokeColor="@color/octave"
        app:strokeWidth="@dimen/size_02x" />


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_02x"
        android:background="@color/permission_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSetting" />
</androidx.constraintlayout.widget.ConstraintLayout>